--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -656,6 +656,27 @@
       "version-1.1.2/version-1.1.2-doc-messageformatting-custom": {
         "title": "Customization"
       },
+      "version-1.10.1/version-1.10.1-api-calendardate": {
+        "title": "CalendarDate"
+      },
+      "version-1.10.1/version-1.10.1-api-cldr-calendars": {
+        "title": "CLDR.Calendars"
+      },
+      "version-1.10.1/version-1.10.1-api-currencytype": {
+        "title": "CurrencyType"
+      },
+      "version-1.10.1/version-1.10.1-api-dateintervalformatoptions": {
+        "title": "DateIntervalFormatOptions"
+      },
+      "version-1.10.1/version-1.10.1-api-datetimepatternfieldtype": {
+        "title": "DateTimePatternFieldType"
+      },
+      "version-1.10.1/version-1.10.1-api-languageidtype": {
+        "title": "LanguageIdType"
+      },
+      "version-1.10.1/version-1.10.1-api-timezonetype": {
+        "title": "TimeZoneType"
+      },
       "version-1.2.10/version-1.2.10-api-cldr-calendars": {
         "title": "CLDR.Calendars"
       },
